# early-universe

./: .gitignore  INSTRUCTIONS.md  KNOWLEDGE.md  PLAN.md  README.md  STEP1.md  STEP2.md  STEP3.md  STEP4.md  STEP5.md  STEP6.md  STEP7.md  STEP8.md  conftest.py  dvc.yaml  early_universe_notebook.ipynb  early_universe_readme.md  params.yaml  pyproject.toml
archeon/: __init__.py
archeon/academic/: __init__.py  citation.py  latex_export.py  notebook_generator.py  reproducibility.py
archeon/anomaly/: __init__.py  autoencoder.py  cold_spot.py  latent_analysis.py  statistical_tests.py
archeon/api/: models.py  service.py  simulations.py
archeon/compression/: __init__.py  disentanglement.py  interpretability.py  vae.py
archeon/config/: __init__.py  planck2018.yaml
archeon/data/: __init__.py  desi.py  gaia.py  illustris.py  planck.py  priors.py  sdss.py  synthetic.py
archeon/inverse/: __init__.py  bayesian_cnn.py  evaluation.py  mcmc_baseline.py  training.py  uncertainty.py  validation.py
archeon/ml/: __init__.py  emulator.py  fno_structure.py  pinn_friedmann.py  training.py
archeon/physics/: __init__.py  alternative.py  boltzmann.py  friedmann.py  (+4 more)
tests/: test_anomaly.py  test_api.py  test_bayesian_cnn.py  test_compression.py  test_desi.py  test_evaluation.py  test_friedmann.py  test_inflation.py  test_mcmc_baseline.py  test_ml.py  test_perturbations.py  test_phase8.py  test_priors.py  test_recombination.py  test_synthetic.py  test_training.py  test_uncertainty.py  test_validation.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+46 files in other folders)
